# libxlsx

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/libxlsx/: __init__.py  column.py  const.py  sheet.py  utils.py  workbook.py
src/lxls/: __init__.py  column.py  types.py  utils.py  workbook.py
test/: test_basic_functionality.py  test_range_selection.py  test_write_from_empty.py
test/fixtures/: Book0.xlsx  Book1.xlsx  Book2.xlsx
